# lmdvvyd

./: .gitmodules  CMakeLists.txt  README.md  Rakefile  report.md
include/: macros.hpp  set.hpp
server/: CMakeLists.txt  main.cpp
templates/: body.cpp.tpl  header.hpp.tpl
